content/classes/3.0/OculusTouchController.md
---
TAGS:
---
## Description

class [OculusTouchController](/classes/3.0/OculusTouchController) extends [WebVRController](/classes/3.0/WebVRController)



## Constructor

## new [OculusTouchController](/classes/3.0/OculusTouchController)(vrGamepad)



#### Parameters
 | Name | Type | Description
---|---|---|---
 | vrGamepad | any | 

## Members

### onSecondaryTriggerStateChangedObservable : [Observable](/classes/3.0/Observable)&lt;ExtendedGamepadButton&gt;



### onThumbRestChangedObservable : [Observable](/classes/3.0/Observable)&lt;ExtendedGamepadButton&gt;



### onAButtonStateChangedObservable : [Observable](/classes/3.0/Observable)&lt;ExtendedGamepadButton&gt;



### onBButtonStateChangedObservable : [Observable](/classes/3.0/Observable)&lt;ExtendedGamepadButton&gt;



### onXButtonStateChangedObservable : [Observable](/classes/3.0/Observable)&lt;ExtendedGamepadButton&gt;



### onYButtonStateChangedObservable : [Observable](/classes/3.0/Observable)&lt;ExtendedGamepadButton&gt;



## Methods

### initControllerMesh(scene, meshLoaded) &rarr; void



#### Parameters
 | Name | Type | Description
---|---|---|---
 | scene | [Scene](/classes/3.0/Scene) | 
optional | meshLoaded | (mesh: [AbstractMesh](/classes/3.0/AbstractMesh)) =&gt; void | 
